# ignorable

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: enum_derives.rs  foo.rs  seed.nu  struct_derives.rs  struct_generics.rs
tests/Debug/: empty.rs
tests/Eq/: main.rs
tests/Hash/: enum.rs  enum_empty.rs
tests/Ord/: main.rs  named_struct.rs  tuple_struct.rs
tests/partial_ord/: empty.rs  enum.rs  enum_empty.rs  main.rs  named_struct.rs  tuple_struct.rs
